Wed Mar 14 08:06:35 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* enumerator.c (lazy_zip): add Enumerable::Lazy#flat_map.

	* enumerator.c (lazy_lazy): just returns self.

Wed Mar 14 07:48:36 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c (datetime_s_now): [ruby-core:43256].

Tue Mar 13 22:00:14 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_set_arguments): keyword rest arg without keyword args.

	* node.c (dump_node): dump kw_rest_arg too.

	* parse.y (block_param, f_arg): more kwrest patterns.
	  [ruby-core:42455][Bug #5989]

	* parse.y (new_args_gen): no extra kw_rest_arg if no keyword rest arg.

Tue Mar 13 15:17:03 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (block_param, f_args): add rules for the case arguments
	  begin with kwrest.  [ruby-core:42455][Bug #5989]

Tue Mar 13 12:37:53 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (io_encoding_set): always warn if external encoding and internal
	  encoding are identical. [ruby-core:40727] [Bug #5568]

Tue Mar 13 12:37:03 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	Bug #5350

	* gc.c: add ObjectSpace::WeakMap.  [ruby-dev:44565][Bug #5350]

	* lib/weakref.rb: use WeakMap instead of _id2ref.

Tue Mar 13 10:59:48 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb (prepare): skip if basedir is not defined.
	  [ruby-core:39135][Bug #5238]

	* tool/rbinstall.rb (CONFIG.[]): check for mandatory
	  configurations.

Tue Mar 13 00:09:18 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* enumerator.c (enumerable_lazy): added documentation.

Mon Mar 12 20:19:25 2012  Tanaka Akira  <akr@fsij.org>

	* lib/tmpdir.rb (Dir::tmpdir): test the current directory suitable for
	  temporary directory.

Mon Mar 12 20:08:16 2012  Tanaka Akira  <akr@fsij.org>

	* lib/fileutils.rb (fu_have_symlink?): specify TypeError for rescue
	  clause.

Mon Mar 12 19:23:13 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_find_encoding): new function find encoding from